[gd_scene load_steps=43 format=2]

[ext_resource path="res://Assets/player/player-idle.png" type="Texture" id=1]
[ext_resource path="res://Assets/player/player-swiming.png" type="Texture" id=2]
[ext_resource path="res://Assets/player/player-rush.png" type="Texture" id=3]
[ext_resource path="res://Assets/player/player-fast.png" type="Texture" id=4]
[ext_resource path="res://Player/Player.gd" type="Script" id=5]
[ext_resource path="res://Overlay/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/player/player-hurt.png" type="Texture" id=7]
[ext_resource path="res://Overlay/Hitbox.tscn" type="PackedScene" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 7 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 7 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 7 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 4 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 4 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 4 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 160, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 320, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 400, 0, 80, 80 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 80, 80 )

[sub_resource type="SpriteFrames" id=31]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 10.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 7 ) ],
"loop": false,
"name": "rush",
"speed": 10.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 14 ) ],
"loop": false,
"name": "hurt",
"speed": 10.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ) ],
"loop": true,
"name": "fast",
"speed": 9.0
}, {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "swim",
"speed": 8.0
} ]

[sub_resource type="CircleShape2D" id=32]
radius = 16.0

[sub_resource type="CapsuleShape2D" id=33]
radius = 6.0

[sub_resource type="CapsuleShape2D" id=34]
radius = 8.0
height = 32.0

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 5 )
MAX_SPEED = 120

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 31 )
animation = "rush"
frame = 7
playing = true

[node name="SwimCollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 32 )

[node name="BubblesTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_top = 0
limit_right = 2048
limit_bottom = 1200

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
rotation = 1.5708
shape = SubResource( 33 )

[node name="Hitbox" parent="." instance=ExtResource( 8 )]
collision_layer = 0
collision_mask = 2147483652

[node name="CollisionShape2D" parent="Hitbox" index="0"]
rotation = 1.5708
shape = SubResource( 34 )
[connection signal="timeout" from="BubblesTimer" to="." method="_on_BubblesTimer_timeout"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]

[editable path="Hurtbox"]

[editable path="Hitbox"]
